--- a/.github/workflows/Alloino-gne.yml
+++ b/.github/workflows/Alloino-gne.yml
@@ -42,12 +42,14 @@ jobs:
             fname=$(basename "$f")
             # Remove extension
             fname_noext="${fname%.*}"
-            esc_fname=$(echo "$fname_noext" | sed 's/[\/&]/\\&/g')
+            # Escape sed special chars
+            esc_fname=$(printf '%s\n' "$fname_noext" | sed 's/[\/&]/\\&/g')
             while IFS= read -r line; do
               if [[ "$line" == \#EXTINF* ]]; then
                 if [[ "$line" =~ group-title=\"([^\"]+)\" ]]; then
                   oldgroup="${BASH_REMATCH[1]}"
-                  esc_oldgroup=$(echo "$oldgroup" | sed 's/[\/&]/\\&/g')
+                  esc_oldgroup=$(printf '%s\n' "$oldgroup" | sed 's/[\/&]/\\&/g')
+                  # Use | as delimiter to avoid / conflicts
                   newline=$(echo "$line" | sed "s|group-title=\"[^\"]*\"|group-title=\"${esc_fname} | ${esc_oldgroup}\"|")
                   echo "$newline" >> All-playlist.m3u
                 else
