--- a/.github/workflows/Alloino-gne.yml
+++ b/.github/workflows/Alloino-gne.yml
@@ -2,7 +2,7 @@ name: Merge M3U Playlists
 
 on:
   schedule:
-    - cron: "*/15 * * * *"   # Every 15 minutes
+    - cron: "*/15 * * * *"
   workflow_dispatch:
 
 jobs:
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout current repository
+      - name: Checkout source repository
         uses: actions/checkout@v3
 
       - name: Set up Python
@@ -36,11 +36,10 @@ jobs:
 
       - name: Merge Playlists
         run: |
-          echo "#EXTM3U" > All-playlist.m3u
+          echo "#EXTM3U" > playlist.m3u
           for f in merged/*.m3u merged/*.m3u8; do
             [ -f "$f" ] || continue
             fname=$(basename "$f")
-            # Remove extension
             fname_noext="${fname%.*}"
             awk -v fname="$fname_noext" '
               /^#EXTINF/ {
@@ -55,21 +54,21 @@ jobs:
                 next
               }
               { print }
-            ' "$f" >> All-playlist.m3u
+            ' "$f" >> playlist.m3u
           done
 
       - name: Clone target private repository
         run: |
-          git clone https://x-access-token:${{ secrets.TARGET_TOKEN }}@${{ secrets.TARGET_URL }} ${{ secrets.TARGET_NAME }}
+          git clone https://x-access-token:${{ secrets.TARGET_TOKEN2 }}@${{ secrets.TARGET_URL }} ${{ secrets.TARGET_NAME }}
 
       - name: Copy playlist to target repository
-        run: cp All-playlist.m3u ${{ secrets.TARGET_NAME }}/All-playlist.m3u
+        run: cp playlist.m3u ${{ secrets.TARGET_NAME }}/playlist.m3u
 
       - name: Commit & push to target repository
         run: |
           cd ${{ secrets.TARGET_NAME }}
           git config user.name "${{ secrets.TARGET_REPO_USER }}"
           git config user.email "${{ secrets.TARGET_REPO_USER }}@users.noreply.github.com"
-          git add All-playlist.m3u
+          git add playlist.m3u
           git commit -m "🔄 Auto update playlist on $(date '+%Y-%m-%d %H:%M:%S')" || echo "No changes to commit"
-          git push
+          git pushpush
