--- a/.github/workflows/Alloino-gne.yml
+++ b/.github/workflows/Alloino-gne.yml
@@ -71,4 +71,4 @@ jobs:
           git config user.email "${{ secrets.TARGET_REPO_USER }}@users.noreply.github.com"
           git add playlist.m3u
           git commit -m "🔄 Auto update playlist on $(date '+%Y-%m-%d %H:%M:%S')" || echo "No changes to commit"
-          git pushpush
+          git push
